<resources>
    <string name="app_name">CookMate</string>
    <string name="title_home">Feed</string>
    <string name="title_menu">Menu</string>
    <string name="title_share">Share</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="feed_rotm">Recipes of the month</string>
    <string name="feed_news_str">News</string>
    <string name="feed_header3">Featured</string>
    <string name="title_activity_recipe">RecipeActivity</string>

    <string name="recipe_general_info_cooktime"><b>Cook time: </b></string>
    <string name="recipe_general_info_weight"><b>Weight: </b></string>
    <string name="recipe_energy_info_header"><b>Energy info</b></string>
    <string name="recipe_energy_info_header_profile"><b>Energy info – week stats</b></string>
    <string name="achievements_header_profile"><b>Achievements</b></string>
    <string name="recipe_energy_description_header"><b>Description</b></string>
    <string name="recipe_steps_description_header"><b>Steps</b></string>
    <string name="recipe_energy_info_calories"><b>Calories</b></string>
    <string name="recipe_energy_info_b"><b>Proteins</b></string>
    <string name="recipe_energy_info_j"><b>Fats</b></string>
    <string name="recipe_energy_info_u"><b>Carbons</b></string>
    <string name="start">Start!</string>

    <string name="string_comments">Discuss</string>

    <string name="title_activity_cooking">CookingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="new_comment_dialog_title">New comment</string>
    <string name="you_ve_did_it">You\'ve did it!</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="close">Close</string>
    <string name="all_comments">All comments</string>
    <string name="mock_rating">Rating: 3,1</string>
</resources>
