<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cooking_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context="almostct.top.foodhack.ui.cooking.CookingActivity">


    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/cooking_regular"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:progress="20"
            android:visibility="visible"
            android:id="@+id/step_progress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="italic"
            android:gravity="center"
            android:id="@+id/step_countdown" />

        <almostct.top.foodhack.ui.common.AutoResizeTextView
            android:id="@+id/fullscreen_content_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:keepScreenOn="true"
            android:paddingStart="@dimen/medium_padding"
            android:paddingEnd="@dimen/medium_padding"
            android:text="Recipe text..."
            android:textColor="#696969"
            android:textSize="50sp"
            android:textStyle="bold" />

        <include layout="@layout/separator" />

        <almostct.top.foodhack.ui.common.AutoResizeTextView
            android:id="@+id/fullscreen_content_ingredients"
            android:paddingStart="@dimen/big_padding"
            android:paddingEnd="@dimen/big_padding"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="start|top"
            android:layout_marginStart="@dimen/big_padding"
            android:keepScreenOn="true"
            android:text="Recipe ingredient2\nRecipe ingredient1"
            android:textColor="#696969"
            android:textSize="25sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/dummy_button"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comments" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cooking_congratulations"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/plus_one_achievement"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/big_padding"
            android:layout_weight="1" />

        <TextView
            style="@style/FeedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_ve_did_it" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cooking_share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:layout_height="wrap_content"
                android:text="@string/share_with_friends" />

            <Button
                android:id="@+id/cooking_close"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:layout_height="wrap_content"
                android:text="@string/close" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
